# survivor-pool

./: .env.dev  .env.example  .env.prod  .env.prod.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  compose.yml  mise.toml
.agents/skills/survivor-season-review-add/: SKILL.md
.agents/skills/survivor-season-review-add/agents/: openai.yaml
.agents/skills/survivor-week-updates/: SKILL.md
.agents/skills/survivor-week-updates/agents/: openai.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: main.py
backend/src/app/: dependencies.py
backend/src/app/core/: app.py  auth.py  config.py  email.py  security.py
backend/src/app/db/: mongo.py
backend/src/app/routers/: __init__.py  picks.py  pools.py  root.py  seasons.py  users.py
backend/src/app/schemas/: picks.py  pools.py  seasons.py  users.py
backend/src/app/services/: common.py  picks.py  pools.py  seasons.py  users.py
db/: README.md  init.js  update.sh
db/init/: README.md  init.js  season48.js
db/seasons/: season48.js  season49.js  season50.js
docs/: DB_schema.md  PRD.md  authentication.md  email_verification.md
frontend/: app_store_content.md
frontend/survivor_pool/: .dockerignore  README.md  pubspec.yaml
frontend/survivor_pool/lib/: main.dart
frontend/survivor_pool/linux/: CMakeLists.txt
frontend/survivor_pool/test/: widget_test.dart
frontend/survivor_pool/web/: Dockerfile  index.html  manifest.json  nginx.conf
frontend/survivor_pool/windows/: CMakeLists.txt
scripts/: dev-mongosh.sh  prod-mongosh.sh  update-db.sh
(+50 files in other folders)
